# Snowflake_Data_Science

./: Generate_Data.ipynb  IMPLEMENTATION_GUIDE.md  README.md  Step01_Setup.ipynb  conda.yml  setup_env.sh
helper/: useful_fns.py
implementations/01_snowflake_notebooks/: CLV_MODEL_NOTEBOOK_WORKAROUND.ipynb  CLV_MODEL_NOTEBOOK_latest.ipynb  CLV_Model_Notebook.ipynb  README.md  feature_engineering_fns.py
implementations/01_snowflake_notebooks/helper/: useful_fns.py
implementations/02_ml_jobs_notebook/: CLV_MODEL_NOTEBOOK.ipynb  README.md
implementations/02_ml_jobs_notebook/helper/: __init__.py
implementations/02_snowpark_sessions/: CLV_MODEL_NOTEBOOK_WORKAROUND.ipynb  README.md
implementations/03_ml_jobs/: README.md
implementations/03_ml_jobs_framework/: .pre-commit-config.yaml  README.md  conda.yml  main.py  pyproject.toml
implementations/03_ml_jobs_framework/conf/: parameters.yml
implementations/03_ml_jobs_framework/pipelines/: feature_pipeline.py  monitoring_pipeline.py  promotion_pipeline.py  training_pipeline.py
implementations/03_ml_jobs_framework/src/: session.py
implementations/03_ml_jobs_framework/src/feature_engineering/: data_loader.py  feature_store.py  preprocessing.py
implementations/03_ml_jobs_framework/src/ml_engineering/: monitoring.py  promotion.py  serving.py
implementations/03_ml_jobs_framework/src/modelling/: train.py
